[tool.poetry]
name = "alliander-charge-course"
version = "0.1.0"
description = ""
authors = ["Rinse Liefferink <rinse.liefferink@alliander.com> Forked from: GroenteLepel <daniel.kok@alliander.com>"]
readme = "README.md"
package-mode = false

[[tool.poetry.source]]
name = "artifactory"
url = "https://alliander.jfrog.io/artifactory/api/pypi/pypi-all/simple"
priority = "primary"

[tool.poetry.dependencies]
python = "^3.11"
ipykernel = "^6.29.5"
numpy = "^2.1.2"
matplotlib = "^3.9.2"
pandas = "^2.2.3"
seaborn = "^0.13.2"
scipy = "^1.14.1"
torch = "^2.5.1"
statsmodels = "^0.14.4"
pyarrow = "^18.0.0"
jupyter = "^1.1.1"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
